Fix Babybase issue with line spacing

--- a/public/css/wildduck.css
+++ b/public/css/wildduck.css
@@ -298,6 +298,11 @@ table.limited {
     border-left: 2px solid #eeeeee;
 }
 
+.note-editable p {
+    margin: 0px;
+    padding: 0px;
+}
+
 .toolbar-container {
     display: flex;
     flex-wrap: wrap-reverse;
